<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/people"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/work"
            android:title="@string/menu_work" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/gamer"
            android:title="@string/menu_play" />
        <item
            android:id="@+id/nav_school"
            android:icon="@drawable/school2"
            android:title="@string/menu_school" />
        <item
            android:id="@+id/nav_family"
            android:icon="@drawable/family"
            android:title="@string/menu_family" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/friends"
            android:title="@string/menu_friends" />
    </group>

</menu>